Fixed double border on navbar header

--- a/Material_Design_Angular_Template/src/app/stylesheets/_custom.scss
+++ b/Material_Design_Angular_Template/src/app/stylesheets/_custom.scss
@@ -21,7 +21,7 @@ $font-size-large: 22px;
     overflow: hidden;
 }
 .scrollableContainer .headerSpacer {
-    border: 1px solid #d5d5d5;
+    border: 0px !important;
     border-bottom-color: #bbb;
     position: absolute;
     height: 36px;
